[package]
name = "dogbox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower_governor = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography - Post-quantum hybrid
# Using ML-KEM (Kyber) for PQ key encapsulation
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

# Classic crypto for hybrid approach
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = "1.7"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
once_cell = "1.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
nix = { version = "0.30.1", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["multipart"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
